cargo-features = ["resolver"]

[workspace]

[package]
name = "at25010b"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "at25010b"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    # "futures/std",
]

[dependencies]
drone-core = { version = "0.14.0", path="../../../drone-core" }
drone-cortexm = { version = "0.14.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path="../../../drone-cortexm" }
drone-stm32-map = { version = "0.14.0", features = ["dma", "gpio", "spi"], path="../../../drone-stm32-map" }
drone-stm32f4-hal = { version = "0.1.0", features = ["dma", "gpio", "rcc", "spi"], path="../../../drone-stm32f4-hal" }
drone-at250x0-drv = { version = "0.1.0", path="../../src/at250x0" }
async-trait = "0.1"

[profile.release]
lto = true
debug = true
panic = "abort"
