[workspace]

[package]
name = "cc1200"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cc1200"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]

[dependencies]
drone-core = { version = "0.14.3", path="../../../drone-core" }
drone-cortexm = { version = "0.14.1", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path="../../../drone-cortexm" }
drone-stm32-map = { version = "0.14.0", features = ["dma", "exti", "gpio", "spi", "uart", "tim"], path="../../../drone-stm32-map" }
drone-time = { version = "0.1.0", features = ["stm32f4"], path="../../../drone-time" }
drone-stm32f4-hal = { version = "0.1.0", features = ["dma", "exti", "gpio", "rcc", "spi", "uart", "tim"], path="../../../drone-stm32f4-hal" }
drone-cc1200-drv = { version = "0.1.0", features = ["stm32f4"], path="../../src/cc1200" }
drone-framesync = { version = "0.1.0", path="../../../drone-framesync" }
drone-mbus = { version = "0.1.0", path="../../../drone-mbus" }
async-trait = "0.1"
bitvec = { version = "0.21", default-features = false, features = ["alloc"] }
futures = { version = "0.3.0", default-features = false }
#rmp = { git = "https://github.com/rmja/msgpack-rust", default-features = false }

[profile.release]
lto = true
debug = true
panic = "abort"
